--- a/zbikeapp/templates/about.html
+++ b/zbikeapp/templates/about.html
@@ -1,13 +1,12 @@
 
     {% include 'header.html' %}
     {% load static %}
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg_3.jpg' %});" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg2.jpg' %});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">About Us</h1>
+            <h1 style="font-size: 80px;font-weight: 800;text-shadow: 2px 7px 0px #c20000;" >About Us</h1>
           </div>
         </div>
       </div>
@@ -15,17 +14,17 @@
 
     <section class="ftco-section ftco-about">
 			<div class="container">
-				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url({%  static 'images/about.jpg' %});">
+				<div class="row no-gutters" style="height: 950px;">
+					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url({%  static 'images/ca.jpeg' %});">
 					</div>
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4">Welcome to Carbook</h2>
+	            <h2 class="mb-4">Welcome to family</h2>
 
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            <p><a href="#" class="btn btn-primary py-3 px-4">Search Vehicle</a></p>
+	            <p style="text-align: justify;">Rajdhani Cars removes the danger from purchasing a used vehicle to offer you true serenity with zero trade offs. It gives an answer for all trade-in vehicle related requirements with administrations like moderate vehicle credits, paper move, guarantee adjusting, crisis emergency aides and protection restoration for used vehicles.</p>
+	            <p style="text-align: justify;" >At the point when you purchase a Rajdhani Cars Assured vehicle, you get a pre-owned vehicle that is non-unintentional, non-meter altered, has clean records and has been altogether tried against a stringent. Any utilized vehicle can get guaranteed. It takes flawlessness to be Rajdhani Cars Certified. Experience a straightforward and completely straightforward method of purchasing utilized vehicles with Rajdhani Cars. Track down your ideal match from our wide scope of completely assessed and ensured utilized vehicles at the best costs. All Rajdhani Cars Assured vehicles accompany bother free administrative work, free RC move, and pre-owned vehicle finance alternatives with low-loan costs beginning, Today, it has more than many cheerful clients who prescribe it to their loved ones.</p>
+	            <p><a href="{% url 'bikes' %}" class="btn btn-primary py-3 px-4">Buy Now</a></p>
 	          </div>
 					</div>
 				</div>
@@ -37,85 +36,14 @@
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="col-md-6 heading-section heading-section-white ftco-animate">
-            <h2 class="mb-3">Do You Want To Earn With Us? So Don't Be Late.</h2>
-            <a href="#" class="btn btn-primary btn-lg">Become A Driver</a>
+            <h2 class="mb-3">A Car For All Budgets.
+              A car for everyone.</h2>
+            <a href="(% url 'bikes' %)" class="btn btn-primary btn-lg">Cars</a>
           </div>
 				</div>
 			</div>
 		</section>
 
-
-    <section class="ftco-section testimony-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Testimonial</span>
-            <h2 class="mb-3">Happy Clients</h2>
-          </div>
-        </div>
-        <div class="row ftco-animate">
-          <div class="col-md-12">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url({%  static 'images/person_1.jpg' %})">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url({%  static 'images/person_2.jpg' %})">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url({%  static 'images/person_3.jpg' %})">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url({%  static 'images/person_1.jpg' %})">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url({%  static 'images/person_1.jpg' %})">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Roger Scott</p>
-                    <span class="position">System Analyst</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section class="ftco-counter ftco-section img" id="section-counter">
 			<div class="overlay"></div>
@@ -124,7 +52,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="60">0</strong>
+                <strong class="number" data-number="10">0</strong>
                 <span>Year <br>Experienced</span>
               </div>
             </div>
@@ -132,7 +60,7 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="1090">0</strong>
+                <strong class="number" data-number="1000">+</strong>
                 <span>Total <br>Cars</span>
               </div>
             </div>
@@ -140,15 +68,15 @@
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text text-border d-flex align-items-center">
-                <strong class="number" data-number="2590">0</strong>
-                <span>Happy <br>Customers</span>
+                <strong class="number" data-number="1500">0</strong>
+                <span>Rajdhani <br>Family</span>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text d-flex align-items-center">
-                <strong class="number" data-number="67">0</strong>
+                <strong class="number" data-number="3">0</strong>
                 <span>Total <br>Branches</span>
               </div>
             </div>
