--- a/zbikeapp/templates/faqs.html
+++ b/zbikeapp/templates/faqs.html
@@ -1,11 +1,11 @@
 {% include 'header.html' %}
 {% load static %}
-<section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg_3.jpg' %});" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg1.jpg' %});" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
         <div class="col-md-9 ftco-animate pb-5">
-          <h1 class="mb-3 bread">FAQS</h1>
+          <h1 style="font-size: 80px;font-weight: 800;text-shadow: 2px 7px 0px #c20000;" >Faqs</h1>
         </div>
       </div>
     </div>
