--- a/zbikeapp/templates/services.html
+++ b/zbikeapp/templates/services.html
@@ -1,17 +1,16 @@
 {% include 'header.html' %}
     {% load static %}
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg_3.jpg' %});" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url({% static 'images/bg2.jpg' %});" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
-          <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Services <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Our Services</h1>
-          </div>
+        <div class="col-md-9 ftco-animate pb-5">
+          <h1 style="font-size: 80px;font-weight: 800;text-shadow: 2px 7px 0px #c20000;" >Services</h1>
+        </div>
         </div>
       </div>
-    </section>
+      </section>
 
     <section class="ftco-section">
 			<div class="container">
