--- a/zbikeapp/templates/header.html
+++ b/zbikeapp/templates/header.html
@@ -59,7 +59,7 @@
 	          <li class="nav-item "><a href="{%  url 'home' %}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{% url 'bikes' %}" class="nav-link">Cars</a></li>
 	          <li class="nav-item"><a href="{% url 'services' %}" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="{% url 'pricing' %}" class="nav-link">Pricing</a></li>
+            <!-- <li class="nav-item"><a href="{% url 'pricing' %}" class="nav-link">Pricing</a></li> -->
             <li class="nav-item"><a href="{% url 'about' %}" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
 	        </ul>
