--- a/zbikeapp/templates/services.html
+++ b/zbikeapp/templates/services.html
@@ -17,43 +17,43 @@
 				<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Services</span>
-            <h2 class="mb-3">Our Latest Services</h2>
+            <h2 class="mb-3">Our Finance Services</h2>
           </div>
         </div>
 				<div class="row">
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><a href="{% url 'home' %}"><img  src="{% static 'images/ellipse2.png' %}" style="width: 100%;" ></a></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Wedding Ceremony</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading mb-2">Wide Choice of Finance Partners</h3>
+                <p>Taking care of specific financing needs of the customers</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><a href="{% url 'home' %}"><img  src="{% static 'images/ellipse3.png' %}" style="width: 100%;" ></a></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">City Transfer</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading mb-2">Extensive Range of Offers and Benefits</h3>
+                <p>Lower down payment schemes and lower interest rates</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><a href="{% url 'home' %}"><img  src="{% static 'images/ellipse1.png' %}" style="width: 100%;" ></a></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Airport Transfer</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading mb-2">Key Benefits</h3>
+                <p>Choose a loan that is best suited to your needs</p>
               </div>
             </div>
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><a href="{% url 'home' %}"><img  src="{% static 'images/ellipse4.png' %}" style="width: 100%;" ></a></div>
             	<div class="text w-100">
-                <h3 class="heading mb-2">Whole City Tour</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading mb-2">Delighting Our Customers</h3>
+                <p>Accessible finance options for every profile and geography</p>
               </div>
             </div>
 					</div>
